# ai-image-cropper-v2

./: .dockerignore  .gitignore  .markdownlint.json  CHANGELOG.md  DOCKER_DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  create-cognito-client.sh  deploy-cloudformation.sh  docker-compose.yml  nginx-lb.conf  pyproject.toml  test_gpu.py  update_ecs_task.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: __init__.py  api.py  config.py  cropper.py
cloudformation/: 01-ecr-repositories.yaml  02-efs-storage.yaml  03-load-balancer.yaml  04-iam-roles.yaml  05-ecs-cluster.yaml  06-ecs-service.yaml  07-ecs-application.yaml  08-cognito.yaml  09-cloudfront.yaml  PARAMETERS.md  README.md  common-parameters.json.example
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  CliApp.jsx  LogOutput.css  MainApp.jsx  main.jsx  themes.css
