[project]
name = "ai-image-cropper"
version = "1.0.0"
description = "Intelligent image cropping tool with multiple detection methods"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Gary A. Stafford" }]
keywords = [
    "image-processing",
    "cropping",
    "yolo",
    "detr",
    "computer-vision",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "opencv-python>=4.12.0",
    "opencv-contrib-python-headless>=4.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "timm>=1.0.0",
    "transformers>=4.30.0",
    "ultralytics>=8.3.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    "rfdetr>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/garystafford/image-cropper"
Repository = "https://github.com/garystafford/image-cropper"
Issues = "https://github.com/garystafford/image-cropper/issues"
Changelog = "https://github.com/garystafford/image-cropper/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "hatchling>=1.0.0",
    "autoflake>=2.0.0",
]

[project.scripts]
crop-cli = "backend.cropper:main"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true                                # Only use for packages explicitly configured

[tool.uv.sources]
# Use CUDA version on Linux/Windows, fallback to PyPI on macOS
torch = { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
torchvision = { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
only-include = ["backend/cropper.py", "backend/config.py", "backend/api.py"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']
